etc/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 50051 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: anycable_grpc
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: anycable_grpc }
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: anycable_grpc
    connect_timeout: 25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    http2_protocol_options: { }
    hosts: [
      { socket_address: { address: "host.docker.internal", port_value: 50060 }},
      { socket_address: { address: "host.docker.internal", port_value: 50061 }}
    ]
